--- a/medals.html
+++ b/medals.html
@@ -2,6 +2,7 @@
 <html>
   <body>
     <h1>Welcome to our store!</h1>
+    <p>There will be a sale next week with 50% off </p>
     <p>Thank you for shopping with us!</p>
     <p>We have a fine selection of medals.</p>
     <p>Please choose a section below.</p>
