--- a/medals.html
+++ b/medals.html
@@ -2,10 +2,10 @@
 <html>
   <body>
     <h1>Welcome to our store!</h1>
-    <p>There will be a sale next week with 50% off </p>
+    <p>There will be a sale next week with 50% off  and the sale will start at 10</p>
     <p>Thank you for shopping with us!</p>
     <p>We have a fine selection of medals.</p>
-    <p>Please choose a section below.</p>
+    <p>Please choose a section below and link to your email.</p>
     <div>
       <a href="bronze.html">Bronze medals</a>
     </div>
