--- a/medals.html
+++ b/medals.html
@@ -9,5 +9,11 @@
     <div>
       <a href="bronze.html">Bronze medals</a>
     </div>
+    <div>
+      <a href="gold.html">Bronze medals</a>
+    </div>
+    <div>
+      <a href="silver.html">Bronze medals</a>
+    </div>
   </body>
 </html>
